--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Pomodoro Clock</title>
   </head>
   <body>
+    <div id="root">Loading...</div>
+    <script src="./components/App.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
