--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
   <body>
     <div id="root">Loading...</div>
     <script src="./components/App.js"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
